# polychro

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  SPIKE-JSONPATH.md  action.yml  pom.xml
.claude/agents/: tuto_writer.agent.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
chore-move-maven-modules-under-common-parent-folder/: polychro-coverage.json
dependabot-maven-all-dependencies-7ad61a46c8/: polychro-bugs.json  polychro-quality-gate.json  polychro-trivy.json
dependabot-npm_and_yarn-polychro-node-all-dependencies-4a6d39d29b/: polychro-quality-gate.json
feat-track-2-markdown-lint-tuto/: polychro-gitleaks.json
polychro-api/: pom.xml
polychro-capability/: pom.xml
polychro-checkov/: pom.xml
polychro-cli/: pom.xml
polychro-core/: pom.xml
polychro-coverage/: pom.xml
polychro-docs/: pom.xml
polychro-format-common/: pom.xml
polychro-github-action/: pom.xml
polychro-go/: binary.go  go.mod
polychro-html/: pom.xml
polychro-json-schema/: pom.xml
polychro-json-structure/: pom.xml
polychro-markdown/: pom.xml
polychro-mcp/: pom.xml
polychro-node/: package-lock.json  package.json  tsconfig.json
polychro-python/: pyproject.toml
polychro-python/src/polychro/: __init__.py  binary.py  diagnostic.py  linter.py
polychro-ruleset/: pom.xml
polychro-ruleset-polyglot/: pom.xml
polychro-rulesets/: pom.xml
polychro-spike-jsonpath/: pom.xml
polychro-wellformedness/: pom.xml
scripts/: builder.sh
(+582 files in other folders)
