[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polychro"
version = "0.1.0"
description = "Python SDK for Polychro — deterministic linting for spec-driven development"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Naftiko", email = "contact@naftiko.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/naftiko/polychro"
Repository = "https://github.com/naftiko/polychro-python"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/polychro"]
